# penmsh

./: .FindDISLIN.cmake.swp  .gitignore  CMakeLists.txt  FindDISLIN.cmake  LICENSE  LICENSE.md  Makefile  README.md  dislin-9.4-intel  index.html  inpred.f90  mytecio.f90  params.json  penmshxp  readme.txt  subcode0.f90  subcode1.f90  subcode2.f90  subcode3.f90  subcode4.f90  subcode5.f90  subcode6.f90  subcode7.f90  subcode8.f90  supplement01.f90  supplement02.f90  supplement03.f90
case/: cases.list
case1-hexagon/: he3abs.xs  he3demo.pen  he3demo.spc  he3demo1.inp  he3demo2.inp  he3demo_out.mba  he3demo_out.pen  he3demo_titan.inp  penmsh.inp
case2-takeda/: penmsh.inp  smlwr.1  smlwr.ref  takeda.K1  takeda.L1  takeda.M1  takeda.mcr  takeda.pen  takeda.xs  takeda1.inp  takeda2.inp  takeda_out.mba  takeda_out.pen  takeda_titan.inp
docs/: Automatic Mesh Size Generation for PENMSHXP.docx  PENMSHXP.Manual-v2.6b.docx  SharedOverlay.txt
src/: Makefile  inpred.f90  subcode0.f90  subcode1.f90  subcode5.f90  subcode7.f90  subcode8.f90
stable/: Makefile  constants.mod  errcontrol.mod  fido.mod  files.mod  funs.mod  lineread.mod  min4deck.mod  mmytecplt.mod  mplot.mod  paraset3.mod  penmshxp  subcode2.f90  subcode5.f90  subcode6.f90  subcode7.f90  subcode8.f90  supplement01.f90  supplement02.f90
v2.64b/: HowtoCompile.penmsh  inpred.f90  subcode0.f90  subcode3.f90  subcode4.f90  subcode5.f90  subcode8.f90  supplement02.f90
v2.66c/: Makefile.gfortran  Makefile.ifort  compile.pentran.sh  filecomp  iforthelp.out  inpred.f90  mytecio.f90  out.put  penmshxp  set_ifort_compiler.sh  subcode0.f90  subcode1.f90  subcode2.f90  subcode3.f90  supplement02.f90
(+48 files in other folders)
